codegen/tests/ui/missing-return.stderr
error: shuttle_service::main functions need to return a service

         = help: See the docs for services with first class support
         = note: https://docs.rs/shuttle-service/latest/shuttle_service/attr.main.html#shuttle-supported-services

 --> tests/ui/missing-return.rs:2:1
  |
2 | async fn missing_return() {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/missing-return.rs:2:29
  |
2 | async fn missing_return() {}
  |                             ^ consider adding a `main` function to `$DIR/tests/ui/missing-return.rs`
